--- a/springbee-jdbc/pom.xml
+++ b/springbee-jdbc/pom.xml
@@ -57,5 +57,9 @@
       <artifactId>h2</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.springbee</groupId>
+      <artifactId>springbee-common</artifactId>
+    </dependency>
   </dependencies>
 </project>
