--- a/springbee-jdbc/src/test/resources/application.yaml
+++ b/springbee-jdbc/src/test/resources/application.yaml
@@ -34,3 +34,9 @@ spring:
 
   flyway:
     locations: db/migration/{vendor}
+
+springbee:
+  datasource:
+    sql:
+      protection:
+        keywords: drop,truncate
