--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -10,6 +10,6 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>buildtools</artifactId>
-
+  <name>SpringBee :: BuildTools</name>
 
 </project>
