--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>springbee-parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>springbee-parent</name>
+  <name>SpringBee :: Parent</name>
 
   <properties>
     <java.version>1.8</java.version>
@@ -31,6 +31,7 @@
   <modules>
     <module>springbee-common</module>
     <module>springbee-jdbc</module>
+    <module>springbee-web</module>
     <module>springbee-demo</module>
     <module>buildtools</module>
   </modules>
@@ -45,6 +46,11 @@
       <dependency>
         <groupId>org.springbee</groupId>
         <artifactId>springbee-jdbc</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springbee</groupId>
+        <artifactId>springbee-web</artifactId>
         <version>0.0.1-SNAPSHOT</version>
       </dependency>
       <dependency>
