--- a/springbee-demo/pom.xml
+++ b/springbee-demo/pom.xml
@@ -13,11 +13,16 @@
   <artifactId>springbee-demo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <name>SpringBee :: Demo</name>
 
   <dependencies>
     <dependency>
       <groupId>org.springbee</groupId>
       <artifactId>springbee-common</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springbee</groupId>
+      <artifactId>springbee-web</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springbee</groupId>
