--- a/springbee-jdbc/pom.xml
+++ b/springbee-jdbc/pom.xml
@@ -13,8 +13,13 @@
   <artifactId>springbee-jdbc</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <name>SpringBee :: JDBC</name>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springbee</groupId>
+      <artifactId>springbee-common</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jdbc</artifactId>
@@ -56,10 +61,6 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <scope>runtime</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springbee</groupId>
-      <artifactId>springbee-common</artifactId>
     </dependency>
   </dependencies>
 </project>
