--- a/springbee-common/src/main/resources/application-default.yaml
+++ b/springbee-common/src/main/resources/application-default.yaml
@@ -1,11 +1,11 @@
-spring:
-  flyway:
-    locations: db/migration/{vendor}
-    enabled: true
-
-springbee:
-  datasource:
-    sql:
-      protection:
-        enabled: true
-        keywords: drop,truncate
+#spring:
+#  flyway:
+#    locations: db/migration/{vendor}
+#    enabled: true
+#
+#springbee:
+#  datasource:
+#    sql:
+#      protection:
+#        enabled: true
+#        keywords: drop,truncate
