--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <!-- dependencies -->
     <mybatis-spring-boot-starter.version>2.1.2</mybatis-spring-boot-starter.version>
     <pagehelper.version>1.2.13</pagehelper.version>
     <guava.version>29.0-jre</guava.version>
