--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <mybatis-spring-boot-starter.version>2.1.2</mybatis-spring-boot-starter.version>
     <pagehelper.version>1.2.13</pagehelper.version>
     <guava.version>29.0-jre</guava.version>
+
     <!-- plugin dependencies -->
     <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
     <puppycrawl.checkstyle.version>6.19</puppycrawl.checkstyle.version>
@@ -33,10 +34,11 @@
 
   <modules>
     <module>springbee-common</module>
+    <module>springbee-boot</module>
     <module>springbee-jdbc</module>
     <module>springbee-web</module>
-    <module>springbee-demo</module>
     <module>buildtools</module>
+    <module>springbee-demo</module>
   </modules>
 
   <dependencyManagement>
@@ -54,6 +56,11 @@
       <dependency>
         <groupId>org.springbee</groupId>
         <artifactId>springbee-web</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springbee</groupId>
+        <artifactId>springbee-boot</artifactId>
         <version>0.0.1-SNAPSHOT</version>
       </dependency>
       <dependency>
