--- a/springbee-demo/pom.xml
+++ b/springbee-demo/pom.xml
@@ -18,6 +18,10 @@
   <dependencies>
     <dependency>
       <groupId>org.springbee</groupId>
+      <artifactId>springbee-boot</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springbee</groupId>
       <artifactId>springbee-common</artifactId>
     </dependency>
     <dependency>
