--- a/springbee-boot/src/main/resources/springbee-default.properties
+++ b/springbee-boot/src/main/resources/springbee-default.properties
@@ -1,13 +1,8 @@
-#spring:
-#  flyway:
-#    locations: db/migration/{vendor}
-#    enabled: true
-#
-#springbee:
-#  datasource:
-#    sql:
-#      protection:
-#        enabled: true
-#        keywords: drop,truncate
-
+# flyway
+spring.flyway.locations=classpath:/db/migration/{vendor}
+spring.flyway.enabled=true
+# datasource
+springbee.datasource.sql.protection.enabled=true
+springbee.datasource.sql.protection.keywords=drop,truncate
+# spring boot
 management.endpoints.web.exposure.include=health,info,env,metrics
