--- a/springbee-jdbc/pom.xml
+++ b/springbee-jdbc/pom.xml
@@ -62,5 +62,9 @@
       <artifactId>h2</artifactId>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+    </dependency>
   </dependencies>
 </project>
