--- a/springbee-boot/src/main/resources/springbee-default.properties
+++ b/springbee-boot/src/main/resources/springbee-default.properties
@@ -1,8 +1,16 @@
+# server
+server.host=0.0.0.0
+
 # flyway
 spring.flyway.locations=classpath:/db/migration/{vendor}
 spring.flyway.enabled=true
+
 # datasource
 springbee.datasource.sql.protection.enabled=true
 springbee.datasource.sql.protection.keywords=drop,truncate
+
 # spring boot
 management.endpoints.web.exposure.include=health,info,env,metrics
+
+# logging
+springbee.logging.file.name=springbee.log
