--- a/springbee-demo/pom.xml
+++ b/springbee-demo/pom.xml
@@ -32,6 +32,10 @@
       <groupId>org.springbee</groupId>
       <artifactId>springbee-jdbc</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springbee</groupId>
+      <artifactId>springbee-logging</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
