add log output file profile

--- a/springbee-boot/src/main/resources/springbee-default.properties
+++ b/springbee-boot/src/main/resources/springbee-default.properties
@@ -1,3 +1,5 @@
+spring.main.banner-mode=off
+
 # server
 server.host=0.0.0.0
 
@@ -13,4 +15,4 @@ springbee.datasource.sql.protection.keywords=drop,truncate
 management.endpoints.web.exposure.include=health,info,env,metrics
 
 # logging
-springbee.logging.file.name=springbee.log
+logging.file.name=springbee.log
