add logback appender kafka

--- a/springbee-boot/src/main/resources/springbee-default.properties
+++ b/springbee-boot/src/main/resources/springbee-default.properties
@@ -15,4 +15,5 @@ springbee.datasource.sql.protection.keywords=drop,truncate
 management.endpoints.web.exposure.include=health,info,env,metrics
 
 # logging
+logging.file.path=logs
 logging.file.name=springbee.log
