--- a/springbee-boot/src/main/resources/springbee-default.properties
+++ b/springbee-boot/src/main/resources/springbee-default.properties
@@ -1,7 +1,25 @@
+spring.application.name=springbee-application
+
+# info endpoint
+info.app.name=${spring.application.name}
+info.app.version=@project.version@
+info.app.build.time=@timestamp@
+info.java-vendor=${java.specification.vendor}
+info.platform-vendor=springbee
+
+# banner
 spring.main.banner-mode=off
 
 # server
 server.host=0.0.0.0
+server.port=8088
+server.secondary.port=0
+server.http2.enabled=true
+server.undertow.direct-buffers=true
+server.undertow.buffer-size=1024
+server.undertow.threads.io=16
+server.undertow.threads.worker=256
+server.undertow.buffer-pool=1024
 
 # flyway
 spring.flyway.locations=classpath:/db/migration/{vendor}
@@ -12,8 +30,11 @@ springbee.datasource.sql.protection.enabled=true
 springbee.datasource.sql.protection.keywords=drop,truncate
 
 # spring boot
-management.endpoints.web.exposure.include=health,info,env,metrics
+management.endpoints.web.exposure.include=health,info,env,metrics,prometheus
 
 # logging
 logging.file.path=logs
 logging.file.name=springbee.log
+
+# metrics
+management.metrics.tags.application=${spring.application.name}
