--- a/springbee-boot/src/main/resources/springbee-default.properties
+++ b/springbee-boot/src/main/resources/springbee-default.properties
@@ -21,6 +21,13 @@ server.undertow.threads.io=16
 server.undertow.threads.worker=256
 server.undertow.buffer-pool=1024
 
+# server ssl
+server.ssl.enabled=false
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore/springbee.p12
+server.ssl.key-store-password=123456
+server.ssl.key-alias=springbee
+
 # flyway
 spring.flyway.locations=classpath:/db/migration/{vendor}
 spring.flyway.enabled=true
