增加日志脱敏

--- a/springbee-boot/src/main/resources/springbee-default.properties
+++ b/springbee-boot/src/main/resources/springbee-default.properties
@@ -1,15 +1,12 @@
 spring.application.name=springbee-application
-
 # info endpoint
 info.app.name=${spring.application.name}
 info.app.version=@project.version@
 info.app.build.time=@timestamp@
 info.java-vendor=${java.specification.vendor}
 info.platform-vendor=springbee
-
 # banner
 spring.main.banner-mode=off
-
 # server
 server.host=0.0.0.0
 server.port=8088
@@ -20,28 +17,24 @@ server.undertow.buffer-size=1024
 server.undertow.threads.io=16
 server.undertow.threads.worker=256
 server.undertow.buffer-pool=1024
-
 # server ssl
 server.ssl.enabled=false
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:keystore/springbee.p12
 server.ssl.key-store-password=123456
 server.ssl.key-alias=springbee
-
 # flyway
 spring.flyway.locations=classpath:/db/migration/{vendor}
 spring.flyway.enabled=true
-
 # datasource
 springbee.datasource.sql.protection.enabled=true
 springbee.datasource.sql.protection.keywords=drop,truncate
-
 # spring boot
 management.endpoints.web.exposure.include=health,info,env,metrics,prometheus
-
 # logging
 logging.file.path=logs
 logging.file.name=springbee.log
-
+logging.sensitive[0].regex=(\\d{3})\\d{4}(\\d{4})
+logging.sensitive[0].replacement=$1****$2
 # metrics
 management.metrics.tags.application=${spring.application.name}
