--- a/buildtools/pom.xml
+++ b/buildtools/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <artifactId>buildtools</artifactId>
+  <modelVersion>4.0.0</modelVersion>
+
+  <name>SpringBee :: BuildTools</name>
   <parent>
     <artifactId>springbee-parent</artifactId>
     <groupId>org.springbee</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  <modelVersion>4.0.0</modelVersion>
-
-  <artifactId>buildtools</artifactId>
-  <name>SpringBee :: BuildTools</name>
 
 </project>
