--- a/maven-archetype-springbee/pom.xml
+++ b/maven-archetype-springbee/pom.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <artifactId>maven-archetype-springbee</artifactId>
+  <groupId>org.springbee</groupId>
+
   <modelVersion>4.0.0</modelVersion>
+  <name>SpringBee :: Maven Archetype SpringBee</name>
+  <packaging>jar</packaging>
   <parent>
     <artifactId>springbee-parent</artifactId>
     <groupId>org.springbee</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-
-  <groupId>org.springbee</groupId>
-  <artifactId>maven-archetype-springbee</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <name>SpringBee :: Maven Archetype SpringBee</name>
 
 
 </project>
