--- a/springbee-demo/pom.xml
+++ b/springbee-demo/pom.xml
@@ -1,54 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://maven.apache.org/POM/4.0.0"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.springbee</groupId>
-    <artifactId>springbee-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-
-  <groupId>org.springbee</groupId>
   <artifactId>springbee-demo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <name>SpringBee :: Demo</name>
-
-  <dependencies>
-    <dependency>
-      <groupId>org.springbee</groupId>
-      <artifactId>springbee-boot</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springbee</groupId>
-      <artifactId>springbee-common</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springbee</groupId>
-      <artifactId>springbee-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springbee</groupId>
-      <artifactId>springbee-jdbc</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springbee</groupId>
-      <artifactId>springbee-logging</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springbee</groupId>
-      <artifactId>springbee-logging-kafka</artifactId>
-    </dependency>
-  </dependencies>
-
   <build>
     <plugins>
       <plugin>
-        <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <groupId>org.springframework.boot</groupId>
       </plugin>
     </plugins>
   </build>
+
+  <dependencies>
+    <dependency>
+      <artifactId>springbee-boot</artifactId>
+      <groupId>org.springbee</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>springbee-common</artifactId>
+      <groupId>org.springbee</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>springbee-web</artifactId>
+      <groupId>org.springbee</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>springbee-jdbc</artifactId>
+      <groupId>org.springbee</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>springbee-logging</artifactId>
+      <groupId>org.springbee</groupId>
+    </dependency>
+    <dependency>
+      <artifactId>springbee-logging-kafka</artifactId>
+      <groupId>org.springbee</groupId>
+    </dependency>
+  </dependencies>
+  <groupId>org.springbee</groupId>
+  <modelVersion>4.0.0</modelVersion>
+  <name>SpringBee :: Demo</name>
+  <packaging>jar</packaging>
+
+  <parent>
+    <artifactId>springbee-parent</artifactId>
+    <groupId>org.springbee</groupId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+
+  <version>0.0.1-SNAPSHOT</version>
 
 </project>
