--- a/springbee-boot/src/main/resources/springbee-default.properties
+++ b/springbee-boot/src/main/resources/springbee-default.properties
@@ -30,11 +30,12 @@ spring.flyway.enabled=true
 springbee.datasource.sql.protection.enabled=true
 springbee.datasource.sql.protection.keywords=drop,truncate
 # spring boot
-management.endpoints.web.exposure.include=health,info,env,metrics,prometheus
+management.endpoints.web.exposure.include=health,info,env,loggers,metrics,prometheus
 # logging
 logging.file.path=logs
 logging.file.name=springbee.log
 logging.sensitive[0].regex=(\\d{3})\\d{4}(\\d{4})
 logging.sensitive[0].replacement=$1****$2
+management.endpoint.loggers.enabled=true 
 # metrics
 management.metrics.tags.application=${spring.application.name}
