--- a/maven-archetype-springbee/pom.xml
+++ b/maven-archetype-springbee/pom.xml
@@ -7,24 +7,27 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>maven-archetype</packaging>
   <name>SpringBee :: Maven Archetype SpringBee</name>  
+  
+  <parent>
+    <artifactId>springbee-parent</artifactId>
+    <groupId>org.springbee</groupId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
 
   <build>
     <extensions>
       <extension>
         <groupId>org.apache.maven.archetype</groupId>
         <artifactId>archetype-packaging</artifactId>
-        <version>3.1.2</version>
       </extension>
     </extensions>
 
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <artifactId>maven-archetype-plugin</artifactId>
-          <version>3.1.2</version>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.archetype</groupId>
+        <artifactId>maven-archetype-plugin</artifactId>
+      </plugin>
+    </plugins>
   </build>
 
 </project>
