增加 distributed leader 默认配置

--- a/springbee-boot/src/main/resources/springbee-default.properties
+++ b/springbee-boot/src/main/resources/springbee-default.properties
@@ -39,3 +39,5 @@ logging.sensitive[0].replacement=$1****$2
 management.endpoint.loggers.enabled=true 
 # metrics
 management.metrics.tags.application=${spring.application.name}
+# distributed leader
+springbee.distributed.leader.host=${server.host}
