--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
           <groupId>org.apache.maven.archetype</groupId>
           <version>${maven-archetype-plugin.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.eluder.coveralls</groupId>
+          <artifactId>coveralls-maven-plugin</artifactId>
+          <version>${coveralls-maven-plugin.version}</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
@@ -139,6 +144,10 @@
           </execution>
         </executions>
         <groupId>org.jacoco</groupId>
+      </plugin>
+      <plugin>
+        <groupId>org.eluder.coveralls</groupId>
+        <artifactId>coveralls-maven-plugin</artifactId>
       </plugin>
     </plugins>
     <resources>
@@ -432,6 +441,7 @@
     <spotbugs.version>4.0.3</spotbugs.version>
     <timestamp>${maven.build.timestamp}</timestamp>
     <zookeeper.version>3.4.13</zookeeper.version>
+    <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
   </properties>
 
   <version>0.0.1-SNAPSHOT</version>
