--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,14 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Build with Maven
-        run: mvn -B package checkstyle:check --file pom.xml
+      # 编译和单元测试
+      - name: Build & Test
+        run: mvn -B package --file pom.xml
+      # 检查代码风格
+      - name: Checkstyle
+        run: mvn -B checkstyle:check --file pom.xml
+      # 代码测试覆盖率
       - name: Coveralls
-        run: mvn -B jacoco:report coveralls:report -DrepoToken=5o6kSl2F8t6wyGzNQ1RIsODZKKnZMIJiJ --file pom.xml
+        env:
+          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+        run: mvn -B jacoco:report coveralls:report -DrepoToken=$COVERALLS_TOKEN --file pom.xml
