--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,5 +27,5 @@ jobs:
       # 代码测试覆盖率
       - name: Coveralls
         env:
-          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_TOKEN: ${{ secrets.$COVERALLS_TOKEN }}
         run: mvn -B jacoco:report coveralls:report -DrepoToken=$COVERALLS_TOKEN --file pom.xml
