add coveralls badge

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Coveralls
         env:
           COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
-        run: mvn -B jacoco:report coveralls:report -DrepoToken=${{ secrets.COVERALLS_TOKEN }} --file pom.xml
+        run: mvn -B jacoco:report coveralls:report -DrepoToken=5o6kSl2F8t6wyGzNQ1RIsODZKKnZMIJiJ --file pom.xml
