--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,11 +25,9 @@ jobs:
       - name: Checkstyle
         run: mvn -B checkstyle:check --file pom.xml
       - name: param
-        env:
+        with:
           MYTOKEN: ${{ secrets.COVERALLS_TOKEN }}
         run: echo 'my' $MYTOKEN
       # 代码测试覆盖率
       - name: Coveralls
-        env:
-          ACCESS_TOKEN ${{ secrets.COVERALLS_TOKEN }}
         run: mvn -B jacoco:report coveralls:report -DrepoToken="${{ secrets.COVERALLS_TOKEN }}" --file pom.xml
