--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,6 +27,7 @@ jobs:
       - name: param
         with:
           COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
+        run: echo "$COVERALLS_TOKEN"
       # 代码测试覆盖率
       - name: Coveralls
         run: mvn -B jacoco:report coveralls:report -DrepoToken="${{ secrets.COVERALLS_TOKEN }}" --file pom.xml
