--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,6 +24,10 @@ jobs:
       # 检查代码风格
       - name: Checkstyle
         run: mvn -B checkstyle:check --file pom.xml
+      - name: Param
+        env:
+          TEST_SECRET: ${{ secrets.COVERALLS_TOKEN }}
+        run: echo ${#COVERALLS_TOKEN}
       # 代码测试覆盖率
       - name: Coveralls
         run: mvn -B jacoco:report coveralls:report -DrepoToken="${{ secrets.COVERALLS_TOKEN }}" --file pom.xml
