--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,7 @@ jobs:
         run: mvn -B checkstyle:check --file pom.xml
       - name: Param
         env:
-          TEST_SECRET: ${{ secrets.COVERALLS_TOKEN }}
+          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
         run: echo ${#COVERALLS_TOKEN}
       # 代码测试覆盖率
       - name: Coveralls
