use secrets for coveralls token

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,8 +26,9 @@ jobs:
         run: mvn -B checkstyle:check --file pom.xml
       - name: Param
         env:
+          IAM: ZHANGLEI
           COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
-        run: echo ${#COVERALLS_TOKEN}
+        run: echo ${#COVERALLS_TOKEN} $IAM ${#IAM}
       # 代码测试覆盖率
       - name: Coveralls
         run: mvn -B jacoco:report coveralls:report -DrepoToken="${{ secrets.COVERALLS_TOKEN }}" --file pom.xml
