--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ cache:
     - "$HOME/.m2"
 
 script:
-  - mvn clean package -DskipTests=true
+  - mvn clean install -B checkstyle:check
+  - mvn -B jacoco:report coveralls:report -DrepoToken="${evn.COVERALLS_TOKEN}"
