--- a/maven-archetype-springbee/pom.xml
+++ b/maven-archetype-springbee/pom.xml
@@ -24,7 +24,7 @@
 
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.archetype</groupId>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-archetype-plugin</artifactId>
       </plugin>
     </plugins>
