--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+# idea
+.idea/
+*.iml
+
+# macOS
+.DS_Store
+
+# maven
 target/
+
+# springbee
 /springbee-jdbc/memory:masterdb?cache=shared
 /logs/
