--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,4 @@ cache:
     - "$HOME/.m2"
 
 
-script:
-  - mvn clean install -B checkstyle:check sonar:sonar -Dsonar.projectKey=spring-bees_spring-bee
-  - mvn -B jacoco:report coveralls:report -DrepoToken=$COVERALLS_TOKEN
+script: mvn clean install -B checkstyle:check sonar:sonar -Dsonar.projectKey=spring-bees_spring-bee && mvn -B jacoco:report coveralls:report -DrepoToken=$COVERALLS_TOKEN
