--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ cache:
 script: 
   - mvn clean install -B checkstyle:check 
   - mvn -B jacoco:report coveralls:report -DrepoToken=$COVERALLS_TOKEN
-  - mvn -B sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=spring-bees -Dsonar.login="5348fd459773428f29efbe3f50eb665433bb4516" -Dsonar.projectKey=spring-bees_spring-bee -Dsonar.pullrequest.base=$TRAVIS_BRANCH -Dsonar.pullrequest.branch=$TRAVIS_PULL_REQUEST_BRANCH -Dsonar.pullrequest.key=$TRAVIS_PULL_REQUEST -Dsonar.pullrequest.provider=GitHub -Dsonar.pullrequest.github.repository=$TRAVIS_PULL_REQUEST_SLUG
+  - mvn -B sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=spring-bees -Dsonar.login="5348fd459773428f29efbe3f50eb665433bb4516" -Dsonar.projectKey=spring-bees_spring-bee -Dsonar.pullrequest.base=$TRAVIS_BRANCH -Dsonar.pullrequest.branch=$TRAVIS_PULL_REQUEST_BRANCH -Dsonar.pullrequest.provider=GitHub -Dsonar.pullrequest.github.repository=$TRAVIS_PULL_REQUEST_SLUG
