--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ cache:
 
 
 script: 
-  - mvn clean install -B checkstyle:check 
+  - mvn clean install -B
+after_success:
+  - mvn -B checkstyle:check
   - mvn -B jacoco:report coveralls:report -DrepoToken=$COVERALLS_TOKEN
   - mvn clean verify -B sonar:sonar -Dsonar.projectKey=spring-bees_spring-bee -DskipTests
